--- a/greenery/dbt_project.yml
+++ b/greenery/dbt_project.yml
@@ -31,8 +31,8 @@ clean-targets:         # directories to be removed by `dbt clean`
 # In this example config, we tell dbt to build all models in the example/ directory
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
-# models:
-#   greenery:
-#     # Config indicated by + and applies to all files under models/example/
-#     example:
-#       +materialized: view
+models:
+  greenery:
+    # Config indicated by + and applies to all files under models/example/
+    staging:
+      +materialized: view
