--- a/greenery/packages.yml
+++ b/greenery/packages.yml
@@ -1,3 +1,7 @@
 packages:
   - package: dbt-labs/dbt_utils
-    version: 0.8.2
+    version: 1.0.0
+  - package: dbt-labs/audit_helper
+    version: 0.7.0
+  - package: dbt-labs/dbt_project_evaluator
+    version: 0.4.1
